[package]
name         = "cryptobox-c"
version      = "1.0.0"
authors      = ["Wire Swiss GmbH <support@wire.com>"]
description  = "C-FFI to cryptobox"
homepage     = "https://github.com/wireapp/cryptobox-c"
repository   = "git@github.com:wireapp/cryptobox-c.git"
license      = "GPL-3.0"

[lib]
name         = "cryptobox"
doc          = false
crate-type   = ["cdylib"]

[dependencies]
cryptobox           = { path = "../cryptobox" }
cryptobox-filestore = { path = "../cryptobox-filestore" }
libc                = ">= 0.1.12"
proteus             = { git = "https://github.com/wireapp/proteus", branch = "develop" }
